correct spacing issues for some fields

--- a/package/src/common/Input/InputButton/InputButton.module.css
+++ b/package/src/common/Input/InputButton/InputButton.module.css
@@ -22,6 +22,7 @@
     letter-spacing: 0.01em;
     color: var(--text-dark-color);
     margin-bottom: 12px;
+    white-space: nowrap;
 }
 
 .input-wrapper {
